# momenta

./: .gitignore  Cargo.toml  PLAN.md  README.md  report.md  tailwind.config.ts  trunk.toml
.github/workflows/: deploy-gh.yml  release.yml
benches/: Cargo.toml
benches-base/: Cargo.toml
benches-base/benches/: components.rs  rendering.rs  signals.rs
benches-comparison/: Cargo.toml
benches-comparison/benches/: signals.rs  ssr.rs
benches/benches/: components.rs  signals.rs
docs/: 404.html  Cargo.toml  globals.css  index.html  tailwind.config.ts
docs/src/: main.rs
docs/src/components/: mod.rs  shell.rs  ui.rs
docs/src/pages/: advanced.rs  core.rs  foundations.rs  home.rs  mod.rs  navigation.rs
docs/src/pages/ui_library/: alerts.rs  badges.rs  buttons.rs  cards.rs  data_display.rs  feedback.rs  inputs.rs  layout.rs  marketing.rs  mod.rs  nav_components.rs  overlays.rs  typography.rs
docs/static/: llms.txt
momenta/: Cargo.toml
momenta-cli/: Cargo.toml
momenta-cli/src/: cli.rs  config.rs  main.rs  mt.rs
momenta-cli/src/commands/: build.rs  check.rs  dev.rs  format.rs  init.rs  mod.rs  start.rs
momenta-core/: Cargo.toml
momenta-core/src/: lib.rs  nodes.rs  signals.rs
momenta-dom/: Cargo.toml
momenta-dom/src/: lib.rs
momenta-macros/: Cargo.toml
momenta-macros/src/: lib.rs
momenta-router/: Cargo.toml
momenta-router/src/: lib.rs
momenta-ssr/: Cargo.toml  README.md
momenta-ssr/src/: lib.rs
momenta/src/: dom.rs  lib.rs  nodes.rs  signals.rs
scripts/: generate_report.sh  run_all_benchmarks.sh
tests/src/: main.rs
