[package]
name = "momenta-cli"
version = "0.3.1"
edition = "2024"
description = "CLI toolchain for the Momenta framework"
authors = ["Jonathan Irhodia <jonathanirhodia@gmail.com>"]
license = "MIT"
repository = "https://github.com/elcharitas/momenta"
keywords = ["cli", "momenta", "wasm", "ssr", "toolchain"]
categories = ["command-line-utilities", "web-programming"]
documentation = "https://docs.rs/momenta-cli"

[[bin]]
name = "momenta"
path = "src/main.rs"

[[bin]]
name = "mt"
path = "src/mt.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
