[package]
name = "momenta-router"
version = "0.2.3"
edition = "2024"
description = "Routing library for momenta framework"
authors = ["Jonathan Irhodia <jonathanirhodia@gmail.com>"]
license = "MIT"
repository = "https://github.com/elcharitas/momenta"
keywords = ["routing", "router", "momenta", "web"]
categories = ["web-programming"]
documentation = "https://docs.rs/momenta-router"

[dependencies]
momenta = { path = "../momenta", version = "0.2.3" }
matchit = "0.8"
web-sys = { version = "0.3", features = ["Window", "Location", "History", "Event", "PopStateEvent", "EventTarget"] }
wasm-bindgen = "0.2"
