[package]
name = "momenta-ssr"
version = "0.3.2"
edition = "2024"
description = "Server-side rendering utilities for Momenta"
authors = ["Jonathan Irhodia <jonathanirhodia@gmail.com>"]
license = "MIT"
repository = "https://github.com/elcharitas/momenta"
keywords = ["ssr", "html", "server", "axum", "actix"]
categories = ["web-programming", "template-engine"]
documentation = "https://docs.rs/momenta-ssr"
readme = "README.md"

[dependencies]
momenta = { path = "../momenta", version = "0.3.2", default-features = false }
actix-web = { version = "4.13", optional = true, default-features = false, features = ["macros"] }
axum = { version = "0.8", optional = true }
bytes = { version = "1.10", optional = true }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
http = { version = "1.3", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.8", optional = true }

[features]
default = []
actix = ["dep:actix-web", "dep:bytes", "dep:futures-util"]
axum = ["dep:axum", "dep:bytes", "dep:futures-util"]
hyper = ["dep:bytes", "dep:futures-util", "dep:http", "dep:http-body-util", "dep:hyper"]
