[package]
name = "momenta"
version = "0.2.2"
edition = "2024"
description = "A framework for building element level reactive ui"
authors = ["Jonathan Irhodia <jonathanirhodia@gmail.com>"]
license = "MIT"
repository = "https://github.com/elcharitas/momenta"
keywords = ["jsx", "react", "template", "markup", "html"]
categories = ["template-engine", "web-programming"]
documentation = "https://docs.rs/momenta"

[dependencies]
paste = "1.0"
momenta-macros = { path = "../momenta-macros", version = "0.2.2" }
momenta-core = { path = "../momenta-core", version = "0.2.2" }
momenta-dom = { path = "../momenta-dom", version = "0.2.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Event",
    "NamedNodeMap",
    "Attr",
] }

[features]
default = ["full-elements", "full-reactivity", "wasm"]
wasm = ["momenta-dom?/wasm", "wasm-bindgen", "wasm-bindgen-futures", "web-sys"]
# Enable all HTML elements (default)
full-elements = ["momenta-dom"]
# Minimal set of common HTML elements
minimal-elements = ["momenta-dom"]
# Enable computed signals
computed = ["momenta-core/computed"]
# Enable memoization
memoization = ["momenta-core/memoization"]
# Enable all reactivity features
full-reactivity = ["momenta-core/full-reactivity"]
